--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ header h1 {
 
 .input-container input:focus {
     outline: none;
+    background-color: rgb(255, 255, 255);
 }
 
 .input-container button {
